force-app/main/default/objects/Car__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Branch__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KPHB</fullName>
            </value>
            <value>
                <fullName>Madhapur</fullName>
            </value>
            <value>
                <fullName>LB Nagar</fullName>
            </value>
            <value>
                <fullName>Marthahalli</fullName>
            </value>
            <value>
                <fullName>BTM</fullName>
            </value>
            <value>
                <fullName>Hebbal</fullName>
            </value>
            <value>
                <fullName>Tambaram</fullName>
            </value>
            <value>
                <fullName>guindy</fullName>
            </value>
            <value>
                <fullName>Red hills</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>