force-app/main/default/objects/Car__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>