force-app/main/default/objects/Car__c/fields/CarModel__c.field-meta.xml
<CustomField>
    <fullName>CarModel__c</fullName>
    <label>CarModel</label>
    <length>18</length>
    <type>Text</type>
</CustomField>