force-app/main/default/objects/Car__c/fields/CarNumber__c.field-meta.xml
<CustomField>
    <fullName>CarNumber__c</fullName>
    <label>CarNumber</label>
    <length>20</length>
    <type>Text</type>
</CustomField>