force-app/main/default/objects/Car__c/fields/CarOwner__c.field-meta.xml
<CustomField>
    <fullName>CarOwner__c</fullName>
    <label>CarOwner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>