force-app/main/default/objects/Car__c/fields/CarPrice__c.field-meta.xml
<CustomField>
    <fullName>CarPrice__c</fullName>
    <label>CarPrice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>