force-app/main/default/objects/Car__c/fields/OwnerNumber__c.field-meta.xml
<CustomField>
    <fullName>OwnerNumber__c</fullName>
    <label>OwnerNumber</label>
    <type>Phone</type>
</CustomField>