force-app/main/default/objects/Car__c/listViews/Hot_Brandboand_Sheffield_Car.listView-meta.xml
<ListView>
    <fullName>Hot_Brandboand_Sheffield_Car</fullName>
    <filterScope>Queue</filterScope>
    <label>Hot Brandboand-Sheffield</label>
    <queue>Hot_Brandboand_Sheffield</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>